--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -8,16 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#fff">
     <meta name="format-detection" content="telephone=no">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" media="all" href="css/app.css">
     {# {% include "../partials/_media-tags.html" %} #}
   </head>
   <body>
 
-    <!-- BEGIN content -->
-    <div class="out">
-      {% block content %}{% endblock %}
-    </div>
-    <!-- END content -->
+    {% block content %}{% endblock %}
 
     <!-- BEGIN scripts -->
     <script type="text/javascript" src="js/app.js"></script>
