--- a/src/templates/partials/_mixins.html
+++ b/src/templates/partials/_mixins.html
@@ -2,23 +2,9 @@
 <svg class="icon icon-{{i}}"><use xlink:href="img/sprite.svg#icon-{{i}}"></use></svg>
 {% endmacro %}
 
-{% macro breadcrumbs(props) %}
-<!-- begin breadcrumbs -->
-<ul class="breadcrumbs{% if props.class %}{{ props.class }}{% endif %}">
-	{% for item in props.list %}
-		{% if loop.last %}
-		<li class="breadcrumbs__item">
-			<span>{{ item }}</span>
-		</li>
-		{% else %}
-		<li class="breadcrumbs__item">
-			<a href="#">{{ item }}</a>
-		</li>
-		{% endif %}
-	{% endfor %}
-</ul>
-<!-- end breadcrumbs -->
-{% endmacro %}
+
+
+
 
 {% macro checkbox(props) %}
 <!-- begin input -->
@@ -27,4 +13,39 @@
 	<span class="{% if props.radio %}radio{% else %}checkbox{% endif %}__text">{{ props.text or 'checkbox' }}</span>
 </label>
 <!-- end input -->
+{% endmacro %}
+
+<!-- MY macro -->
+{% macro logo(i) %}
+<img class="{{i}}" src="img/logo.png" alt="logo">
+{% endmacro %}
+
+{% macro breadcrumbs(props) %}
+<!-- begin breadcrumbs -->
+<ul class="breadcrumbs{% if props.class %}{{ props.class }}{% endif %}">
+	{% for item in props %}
+		{% if item.list %}
+			{% for i in item.list %}
+				<li class="breadcrumbs__item">
+				   <a href="#">{{ i }}</a>
+			   </li>
+			{% endfor %}
+		{% endif %}
+				
+		{% for i in item.list %}
+			{% if loop.last %}
+				<span>{{i}}</span>	
+			{% endif %}
+		{% endfor %}
+		
+		{% if item.lang %}
+		<div class="breadcrumbs__item">
+			{% for i in item.lang %}
+				<div>{{i}}</dvi>		
+			{% endfor %}	
+		</div>
+		{% endif %}
+	{% endfor %}		
+</ul>
+<!-- end breadcrumbs -->
 {% endmacro %}
