--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,31 +1,10 @@
 body
-	font-family: 'Montserrat', sans-serif
-
-.wrap
-	width: 1170px
-	margin: 0 auto
-
-.bg-blue
-	background-color: #00bdca
-
-.header-nav
-	padding: 66px 0
+	font-family: 'Montserrat', sans-serif;
+.block
 	display: flex
-	align-items: center
-	justify-content: space-between
-.logo
-	display: flex
-	&__text
-		margin-left: 12px
-		p
-			color: $white
-			font-size: 24px
-			span
-				color: #56ecf6
-		p:nth-child(2)
-			font-size: 13px
-			font-weight: 500
-			line-height: 3px
+	// remove this
+
+
 
 	
 
