--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -12,10 +12,12 @@
     <link rel="stylesheet" media="all" href="css/app.css">
     {# {% include "../partials/_media-tags.html" %} #}
   </head>
-  <body>
+  <body class="bg-blue">
 
-    {% block content %}{% endblock %}
-
+    <div class="out">
+      {% block content %}{% endblock %}
+    </div>
+    
     <!-- BEGIN scripts -->
     <script type="text/javascript" src="js/app.js"></script>
     <!-- END scripts -->
