--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -4,5 +4,9 @@ title: Index page
 {% extends "layouts/_layout.html" %}
 
 {% block content %}
+
 	{% include "partials/_header.html" %}
+	{% include "partials/_preview.html" %}
+
+	
 {% endblock %}
