--- a/src/templates/partials/_mixins.html
+++ b/src/templates/partials/_mixins.html
@@ -1,51 +1,29 @@
-{% macro icon(i) %}
-<svg class="icon icon-{{i}}"><use xlink:href="img/sprite.svg#icon-{{i}}"></use></svg>
-{% endmacro %}
-
-
-
-
-
-{% macro checkbox(props) %}
-<!-- begin input -->
-<label class="{% if props.radio %}radio{% else %}checkbox{% endif %}{% if props.class %} {{ props.class }}{% endif %}">
-	<input type="{% if props.radio %}radio{% else %}checkbox{% endif %}" name="{{ props.name or 'checkbox' }}"{% if props.checked %} checked{% endif %}>
-	<span class="{% if props.radio %}radio{% else %}checkbox{% endif %}__text">{{ props.text or 'checkbox' }}</span>
-</label>
-<!-- end input -->
-{% endmacro %}
-
 <!-- MY macro -->
-{% macro logo(i) %}
-<img class="{{i}}" src="img/logo.png" alt="logo">
-{% endmacro %}
-
-{% macro breadcrumbs(props) %}
+{% macro menu(props) %}
 <!-- begin breadcrumbs -->
-<ul class="breadcrumbs{% if props.class %}{{ props.class }}{% endif %}">
+<ul class="menu{% if props.class %}{{ props.class }}{% endif %}">
 	{% for item in props %}
 		{% if item.list %}
 			{% for i in item.list %}
-				<li class="breadcrumbs__item">
+				<li class="menu__item">
 				   <a href="#">{{ i }}</a>
 			   </li>
 			{% endfor %}
 		{% endif %}
-				
-		{% for i in item.list %}
-			{% if loop.last %}
-				<span>{{i}}</span>	
-			{% endif %}
-		{% endfor %}
-		
-		{% if item.lang %}
-		<div class="breadcrumbs__item">
-			{% for i in item.lang %}
-				<div>{{i}}</dvi>		
-			{% endfor %}	
-		</div>
-		{% endif %}
 	{% endfor %}		
 </ul>
 <!-- end breadcrumbs -->
+{% endmacro %}
+
+
+{% macro lang(language) %}
+	<div class="lang">
+		{% for i in language %}
+			{% if i.list %}
+			{% for i in i.list %}
+				<div class="lang__item">{{i}}</div>
+			{% endfor %}
+			{% endif %}
+		{% endfor %}
+	</div>
 {% endmacro %}
