--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,15 +1,14 @@
 <!-- HEADER content -->
 <header class="header">
-  <div class="header__inner wrap">
-
+  <div class="header__inner wrapper">
       <div class="logo">
-        <img src="img/logo.png" alt="logo">
+        <img src="img/logo.png" alt="logo" class="logo__img">
         <div class="logo__text">
           <p>Neurobot<span>.trading</span></p>
           <p> Neural network forecasting</p>
         </div>
       </div>
-      <div class="header-wrap">
+      <div class="header-wrapper">
         <nav class="header-nav">
           {{ mixins.menu([
           {list: ['Forecasts', 'Tokens', 'About', 'Log In']}
