--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -1,9 +1,13 @@
 .header
 	&__inner
+		max-width: 990px
 		display: flex
 		align-items: center
+		+md
+			padding: 0 25px
+			
 		+sm
-			padding: 0 25px	
+			padding: 20px 15px 0 15px
 
 .bg-blue
 	background-color: #00bdca
@@ -14,47 +18,61 @@
 	align-items: center
 	width: 100%	
 	justify-content: flex-end
+	+sm
+		display: none
+		padding: 0px
 .logo
 	display: flex
+	+sm
+
 
 	&__img
 		width: 43px
 		height: 44px
-		+sm
+		+md
 			width: 33px
 			height: 34px
 	&__text
 		margin-left: 12px
-        
+		
 		p
 			color: $white
-            font-weight: 600
+			font-weight: 600
 			font-size: 24px
-			+sm
+			+md
 				font-size: 18px	
 		span
 			color: #56ecf6
 		p:nth-child(2)
 			font-size: 13px
 			font-weight: 400
-			line-height: 3pxgulp
+			line-height: 3px
+			+md
+				font-size: 10px
 .logo__text p
-    font-weight: 600
+	font-weight: 600
 
 .header-right
 	display: flex
 	align-items: center
+	+sm
+		flex-direction: row-reverse;
+		width: 100%;
+		justify-content: space-around;
 
 .btn
-	background-color: #ffffff
+	background-color: #fff
 	color: #1d354e
-	padding: 15px 25px	
+	padding: 12px 30px	
 	font-size: 16px
 	border-radius: 16px
 	font-weight: 600
-		+sm
-			font-size: 14px
-		
+	+md
+		font-size: 14px
+		padding: 10px 22px
+	+sm
+		font-size: 12px
+		padding: 6px 18px	
 
 .lang
 	position: relative
@@ -63,20 +81,45 @@
 	background-color: #ffffff
 	font-weight: 600
 	margin-left: 8px
-
 	&:hover 
 		.lang-list
 			opacity: 1
 			visibility: visible
-		
 	&:hover .lang__current
-				border-bottom-left-radius: 0px	
-				border-bottom-right-radius: 0px	
-							
+				border-bottom-left-radius: 0px
+				border-bottom-right-radius: 0px
+	+md
+		background: none
+		&__current
+			color: #fff
+		&:hover .lang__current
+			color: #1d354e
+
+		&:hover
+			background: #fff
+			border-bottom-left-radius: 0px
+			border-bottom-right-radius: 0px
+
+.lang-btn
+	background-color: #fff
+	color: #1d354e
+	padding: 12px 30px	
+	font-size: 16px
+	border-radius: 16px
+	font-weight: 600
+	+md
+		background: none 
+		font-size: 14px
+		padding: 10px 22px;
+	+sm
+		font-size: 12px
+		padding: 6px 18px	
+
 
 .lang-list
 	position: absolute
 	top: 100%
+	width: 100%
 	left: 0px
 	opacity: 0
 	visibility: hidden
@@ -89,9 +132,15 @@
 
 	&__item
 		color: #1d354e
-		padding: 15px 25px
+		padding: 12px 30px
 		font-size: 16px
 		font-weight: 600
+		+md
+			font-size: 14px
+			padding: 10px 22px
+		+sm
+			font-size: 12px
+			padding: 6px 18px	
 
 .lang__link
 	text-decoration: none
@@ -104,9 +153,53 @@
 	text-decoration: underline
 	cursor: pointer
 
+#burger-menu:checked ~ .header-wrapper
+	position: absolute;
+	width: 100%;
+	top: 0;
+	right: 0;
+	background-color: rgba(0,0,0,.9);
+	display: flex;
+	justify-content: space-around
+	flex-direction: column-reverse;
+	padding: 10px 0;
+
+.hidden-menu
+	display: none
+
+.btn-menu 
+	display: none
+	color: #fff
+	cursor: pointer
+	transition: linear 2s
+	z-index: 3
+	width: 25px
+	+sm
+		position: absolute
+		right: 15px
+		display: block
+
+.btn-menu span 
+	display: block
+	height: 3px
+	background-color: #fff
+	margin: 5px 0 0
+	transition: all .1s linear 0.2s
+	position: relative
+	transition: 0.5s
 
 
+.hidden-menu:checked~.btn-menu span.first 
+	transform: rotate(45deg)
+	top: 10px
+	transition: 0.5s
 
 
-	
-			
+.hidden-menu:checked~.btn-menu span.second 
+	opacity: 0
+
+
+.hidden-menu:checked~.btn-menu span.third 
+	transform: rotate(-45deg)
+	top: -6px
+	transition: 0.5s
