--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -7,6 +7,7 @@ title: Index page
 
 	{% include "partials/_header.html" %}
 	{% include "partials/_preview.html" %}
+	{% include "partials/_robot&video.html" %}
 
 	
 {% endblock %}
