--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -6,8 +6,10 @@ title: Index page
 {% block content %}
 
 	{% include "partials/_header.html" %}
+	{% include "partials/_headerRobot.html" %}
 	{% include "partials/_preview.html" %}
-	{% include "partials/_robot&video.html" %}
+	{% include "partials/_headerVideo.html" %}
+
 
 	
 {% endblock %}
