--- a/src/sass/components/_headerRobot.sass
+++ b/src/sass/components/_headerRobot.sass
@@ -19,6 +19,8 @@
         left: 0
     +sm
         background-image: url(../img/robot_sm.png)
-        top: 160px
-        margin-bottom: 100px
+        position: absolute
+        width: 320px
+        height: 444px
+        top: 188px
 
