--- a/src/sass/components/_preview.sass
+++ b/src/sass/components/_preview.sass
@@ -17,6 +17,8 @@
     margin-bottom: 116px
     +md
         max-width: 450px
+    +sm
+        margin-bottom: 175px
     &__title
         font-size: 72px
         font-weight: 600
