--- a/src/sass/helpers/_helpers.sass
+++ b/src/sass/helpers/_helpers.sass
@@ -51,3 +51,6 @@
     font-weight: $font-weight
   @if $line-height != null
     line-height: $line-height
+
+%fontWeightSemiBold
+    font-weight: 600
