--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -9,6 +9,7 @@ title: Index page
 	{% include "partials/_headerRobot.html" %}
 	{% include "partials/_preview.html" %}
 	{% include "partials/_headerVideo.html" %}
+	{% include "partials/_mainForecast.html" %}
 
 
 	
