--- a/src/templates/partials/_headerVideo.html
+++ b/src/templates/partials/_headerVideo.html
@@ -4,6 +4,7 @@
     <video class="video__item" controls>
       <source src="../../video/videoplayback (1).mp4" type="video/mp4">
     </video>
+    <div class="video-btn"></div>
   </div>
 </div>
 <!--HEADER END VIDEO block -->
