--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -5,3 +5,7 @@
 @import "headerRobot"
 @import "headerVideo"
 @import "mainForecast"
+@import "features"
+@import "news"
+@import "questions"
+@import "footer"
