--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -10,6 +10,10 @@ title: Index page
 	{% include "partials/_preview.html" %}
 	{% include "partials/_headerVideo.html" %}
 	{% include "partials/_mainForecast.html" %}
+	{% include "partials/_features.html" %}
+	{% include "partials/_news.html" %}
+	{% include "partials/_questions.html" %}
+	{% include "partials/_footer.html" %}
 
 
 	
