--- a/src/templates/partials/_mainForecast.html
+++ b/src/templates/partials/_mainForecast.html
@@ -1,6 +1,7 @@
+<!-- MAIN block -->
 <div class="main">
-  <div class="bg-main">
-    <section class="forecast-block forecast-wrapper wrapper">
+  <div class="bg-main"></div>
+  <section class="forecast-block forecast-wrapper wrapper">
       <h2 class="forecast-block__title">Popular forecasts</h2>
       <p class="forecast-block__desc">The forecasts are updated every 30 minutes</p>
       <div class="forecast-block__currency">
@@ -17,6 +18,5 @@
         <img class="graph__img_md" src="img/forecast-md.png" alt="forecasts currency">
         <img class="graph__img_sm" src="img/forecast-sm.png" alt="forecasts currency">
     </div>
-  </div>
-
 </div>
+<!-- MAIN end block -->
