--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -1,5 +1,6 @@
 <div class="ft">
   <footer class="footer-wrapper wrapper">
+    <div class="footer-box">
     <div class="subscribe">
       <div class="block-button">
         {{ mixins.subscribe([
@@ -33,6 +34,9 @@
         <a class="copy__link" href="#">Privacy Policy</a>
       </div>
     </div>
+    </div>
+ 
   </footer>
-  <div class="bg-footer"></div>
+ 
 </div>
+<div class="bg-footer"></div>
