--- a/src/templates/partials/_mainForecast.html
+++ b/src/templates/partials/_mainForecast.html
@@ -1,7 +1,9 @@
 <!-- MAIN block -->
+
 <div class="main">
   <div class="bg-main"></div>
   <section class="forecast-block forecast-wrapper wrapper">
+    <div class="forecast-box">
       <h2 class="forecast-block__title">Popular forecasts</h2>
       <p class="forecast-block__desc">The forecasts are updated every 30 minutes</p>
       <div class="forecast-block__currency">
@@ -9,14 +11,17 @@
         {list: ['BTC', 'LTC', 'ETH', 'XRP', 'DASH', 'XMR']}
         ]) }}
       </div>
-            {{ mixins.valueNow([
-                { list: [['XRP/USD'],['now', '12,500'], ['24 hours', '12,550', '317.00 (5.10%)']]}
-                ]) }}
-    </section>
-    <div class="graph">
-        <img class="graph__img_lg" src="img/forecasts.png" alt="forecasts currency">
-        <img class="graph__img_md" src="img/forecast-md.png" alt="forecasts currency">
-        <img class="graph__img_sm" src="img/forecast-sm.png" alt="forecasts currency">
+      {{ mixins.valueNow([
+      { list: [['XRP/USD'],['now', '12,500'], ['24 hours', '12,550', '317.00 (5.10%)']]}
+      ]) }}
     </div>
+  </section>
+  <div class="margin-graph">
+  <div class="graph">
+    <img class="graph__img_lg" src="img/forecasts.png" alt="forecasts currency">
+    <img class="graph__img_md" src="img/forecast-md.png" alt="forecasts currency">
+    <img class="graph__img_sm" src="img/forecast-sm.png" alt="forecasts currency">
+  </div>
+  </div>
 </div>
 <!-- MAIN end block -->
