--- a/src/templates/partials/_news.html
+++ b/src/templates/partials/_news.html
@@ -1,6 +1,7 @@
 <!-- NEWS block -->
 <section class="news">
   <div class=" news-wrapper wrapper">
+    <div class="n-box">
     <h2 class="news__title">Latest News</h2>
     <div class="news-box">
       <div class="news-box__item">
@@ -23,6 +24,8 @@
       </div>
     </div>
     <button class="btn_lg news__btn">Load More</button>
+    </div>
   </div>
 </section>
+
 <!-- NEWS end block -->
