--- a/src/templates/partials/_questions.html
+++ b/src/templates/partials/_questions.html
@@ -1,6 +1,7 @@
 <!-- QUESTIONS block -->
 <div class="inner">
   <section class="questions-wrapper wrapper">
+    <div class="ques-box">
     <div class="questions">
       <h2 class="questions__title"><span>Frequently Asked</span> Questions</h2>
       <div class="questions-block">
@@ -56,6 +57,7 @@
             charts and in the next few updates the graphics will not be different.</p>
         </div>
       </div>
+    </div>
     </div>
   </section>
 </div>
