--- a/src/sass/components/_features.sass
+++ b/src/sass/components/_features.sass
@@ -1,3 +1,5 @@
+.wrapper
+    min-width: 0
 .block
     margin: 0 20px
     +sm
@@ -8,6 +10,7 @@
     padding: 0 50px
     +sm
         padding: 0 10px
+        margin: 0 10px
 
 .features
     max-width: 990px
