--- a/src/sass/components/_mainForecast.sass
+++ b/src/sass/components/_mainForecast.sass
@@ -1,25 +1,28 @@
 .main
+    margin: 0 auto
     margin-bottom: 144px
+
     +sm
         min-height: 800px
         margin-bottom: 50px
 .bg-main
     position: absolute
     width: 100%
-    height: 250%
-    top: 1445px
+    top: 22%
+    height: 40%
     background-color: #1d354e
     transform: skewY(30deg) translateX(-50%)
     left: 50%
     z-index: -2
     +md
-        top: 1000px
-        height: 300%
+        top: 18%
+        height: 40%
     +sm
-        top: 600px
-        height: 300%
+        top: 10%
+        height: 35%
 .forecast-wrapper
     max-width: 980px
+    position: relative
     // transform: skewY(-30deg)
     +md
         padding: 20px 20px
@@ -76,7 +79,7 @@
 
 .graph
     // transform: skewY(-30deg)
-    margin: 0 25px
+    margin: 0 auto
     display: flex
     justify-content: center
     position: relative
@@ -135,3 +138,25 @@
 
 .value-now__item:first-child
     align-self: center
+
+.main:before
+    content: url(../img/forecast-box.png)
+    position: absolute
+    left: 0px
+    +xl
+        display: none
+
+.forecast-box:after
+    content: url(../img/forecast-box2.png)
+    position: absolute
+    top: -15%
+    right: -330px
+    +md
+        top: -54%
+        right: 78px
+    +sm
+        display: none
+
+.margin-graph
+    margin: 0 10px
+
