--- a/src/sass/components/_questions.sass
+++ b/src/sass/components/_questions.sass
@@ -1,5 +1,6 @@
 .inner
     margin: 0 20px
+   
     +sm
         margin: 0px
 .questions-wrapper
@@ -7,9 +8,11 @@
     border-radius: 16px
     padding: 0 50px
     margin-bottom: 165px
+    position: relative
     +sm
         padding: 0 20px
         margin-bottom: 65px
+        margin: 0 10px
 
 .questions
     max-width: 990px
@@ -20,6 +23,8 @@
     +md
         max-width: 700px
         padding: 30px 0
+    +sm
+        margin-bottom: 55px
     &__title
         font-weight: 200
         color: #1d354e
@@ -114,3 +119,30 @@
 #question_five:checked ~ label img
     transform: rotate(90deg);
     transition: 0.3s
+
+.ques-box:before
+    content: url(../img/box.png)
+    position: absolute
+    left: -88px
+    top: 86px
+    +md
+        left: 80%
+        top: -60px
+
+    +sm
+        left: -80px
+        top: -90px
+    
+.ques-box:after
+    content: url(../img/box.png)
+    position: absolute
+    right: -232px
+    bottom: -229px
+    +md
+        left: 90%
+        top: 113%
+        z-index: 1
+
+    +sm
+        left: 69%
+        top: 101%
