--- a/src/templates/partials/_mixins.html
+++ b/src/templates/partials/_mixins.html
@@ -1,19 +1,19 @@
 <!-- MY macro -->
-{% macro menu(props) %}
+{#{% macro menu(props) %}#}
 <!-- begin breadcrumbs -->
-<ul class="menu{% if props.class %}{{ props.class }}{% endif %}">
+{#<ul class="menu{% if props.class %}{{ props.class }}{% endif %}">
 	{% for item in props %}
 		{% if item.list %}
 			{% for i in item.list %}
 				<li class="menu__item">
-				   <a href="#">{{ i }}</a>
+					<a href="tokens.html">{{ i }}</a>
 			   </li>
 			{% endfor %}
 		{% endif %}
 	{% endfor %}		
-</ul>
+</ul> #}
 <!-- end breadcrumbs -->
-{% endmacro %}
+<!-- {# {% endmacro %} #}
 
 
 {% macro lang(language) %}
