--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -14,6 +14,7 @@ title: Index page
 	{% include "partials/_news.html" %}
 	{% include "partials/_questions.html" %}
 	{% include "partials/_footer.html" %}
+	{% include "partials/_footerLink.html" %}
 
 
 	
