--- a/src/templates/partials/_features.html
+++ b/src/templates/partials/_features.html
@@ -1,9 +1,10 @@
 <!-- HOW IT WORKS block -->
 <div class="block">
-<section class="features-wrapper wrapper">
+<section class="white_wrapper wrapper">
   <div class="features">
-    <h2 class="features__title">How it works?</h2>
+
     <div class="features__content">
+      <h2 class="features__title">How it works?</h2>
       <div class="about-features">
         <div class="about-features-left">
           <div class="about-features__item">
