--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -1,13 +1,13 @@
 <!-- HEADER content -->
 <header class="header">
-  <div class="header__inner wrapper">
-    <div class="logo">
-      <img src="img/logo.png" alt="logo" class="logo__img">
+  <div class="header__wrapper wrapper">
+    <a href="#" class="logo">
+      <div class="logo__img"><img src="img/logo.svg" alt="logo"></div>
       <div class="logo__text">
-        <p>Neurobot<span>.trading</span></p>
-        <p> Neural network forecasting</p>
+        <p>Neurobot<span class="trading_blue">.trading</span></p>
+        <p class="logo__text-bottom"> Neural network forecasting</p>
       </div>
-    </div>
+    </a>
     <input type="checkbox" id="burger-menu" class="hidden-menu">
     <label class="btn-menu" for="burger-menu">
       <span class="first"></span>
@@ -35,7 +35,7 @@
         </ul>
       </nav>
       <div class="header-right">
-        <button class="btn">Sign Up</button>
+        <button class="btn btn_white">Sign Up</button>
         <div class="lang">
           <button class="lang-btn lang__current">Eng</button>
           <ul class="lang-list">
