--- a/src/templates/partials/_news.html
+++ b/src/templates/partials/_news.html
@@ -5,25 +5,27 @@
     <h2 class="news__title">Latest News</h2>
     <div class="news-box">
       <div class="news-box__item">
-        <div class="box"></div>
+        <div class="box"><img src="./img/coub.png" alt="box"></div>
         <h3 class="news-box__title">Абсолютная погрешность</h3>
         <p class="news-box__desc">Рондо синхронизует динамический эллипсис. Газ специфицирует ролевой соноропериод.
           Стимулирование коммьюнити, как неоднократно наблюдалось.</p>
       </div>
       <div class="news-box__item">
-        <div class="box"></div>
+        <div class="box"><img src="./img/coub.png" alt="box"></div>
         <h3 class="news-box__title">Производство имитирует эгоцентризм</h3>
         <p class="news-box__desc">Закон тормозит гидродинамический удар. Контекстная реклама вертикально
           восстанавливает интеграл по бесконечной области.</p>
       </div>
       <div class="news-box__item">
-        <div class="box"></div>
+        <div class="box"><img src="./img/coub.png" alt="box"></div>
         <h3 class="news-box__title">Тест полифигурно отражает </h3>
         <p class="news-box__desc">Визуализация концепии, следовательно, излучает архетип. Не доказано, что струя
           накладывает девиантный стратегический рыночный план. Интеграл Дирихле отклоняет креативный постулат.</p>
       </div>
     </div>
-    <button class="btn_lg news__btn">Load More</button>
+    <div class="button-news">
+      <button class="btn_lg btn_dark-blue transition">Load More</button>
+    </div> 
     </div>
   </div>
 </section>
