--- a/src/templates/partials/_preview.html
+++ b/src/templates/partials/_preview.html
@@ -5,6 +5,6 @@
       <p>of Cryptocurrencies </p>
       <p>by Neural Network Algorithm</p>
     </h2>
-    <button class="btn_lg">Join Free For 3 Days</button>
+    <button class="btn_lg btn_dark-blue transition">Join Free For 3 Days</button>
   </div>
 </div>
