--- a/src/templates/partials/_questions.html
+++ b/src/templates/partials/_questions.html
@@ -1,6 +1,6 @@
 <!-- QUESTIONS block -->
 <div class="inner">
-  <section class="questions-wrapper wrapper">
+  <section class="white_wrapper wrapper">
     <div class="ques-box">
       <div class="questions">
         <h2 class="questions__title"><span>Frequently Asked</span> Questions</h2>
