--- a/src/templates/tokens.html
+++ b/src/templates/tokens.html
@@ -9,6 +9,7 @@ title: Tokens
     {% include "partials/_tokensHero.html" %}
     {% include "partials/_tokensRoadmap.html" %}
     {% include "partials/_tokensTutorial.html" %}
+    {% include "partials/_footerLink.html" %}
 
 	
 {% endblock %}
