--- a/src/sass/components/_features.sass
+++ b/src/sass/components/_features.sass
@@ -4,19 +4,16 @@
     margin: 0 20px
     +sm
         margin: 0
-.features-wrapper
+.white_wrapper
     background-color: #ffffff
     border-radius: 16px
-    padding: 0 50px
+    padding: 50px
     +sm
         padding: 0 10px
         margin: 0 10px
 
 .features
     max-width: 990px
-    background-color: #ffffff
-    border-radius: 16px
-    padding: 80px 0px
     margin: 0 auto
     +md
         max-width: 700px
@@ -34,10 +31,7 @@
             text-align: center
 
 .about-features
-    display: flex
-    justify-content: space-between
-    +sm
-        flex-direction: column
+    display: inline-block
     &__item
         display: flex
         align-items: flex-start
@@ -61,11 +55,13 @@
 
 .about-features-left
     width: 50%
+    float: left
     +sm
         width: 100%
 
 .about-features-right
     width: 50%
+    float: right
     padding: 0 0 0 78px
     +md
         padding: 0 0 0 33px
