--- a/src/sass/components/_questions.sass
+++ b/src/sass/components/_questions.sass
@@ -3,10 +3,7 @@
    
     +sm
         margin: 0px
-.questions-wrapper
-    background-color: #ffffff
-    border-radius: 16px
-    padding: 0 50px
+.white_wrapper
     margin-bottom: 165px
     position: relative
     +sm
