--- a/src/sass/components/_tokensRoadmap.sass
+++ b/src/sass/components/_tokensRoadmap.sass
@@ -1,13 +1,21 @@
 main
     margin: 0 10px
+    +md
+        padding: 0 30px
+    +sm
+        padding: 0px
 .roadmap-wrapper
     max-width: 980px
     margin: 0 auto
 
 .bg-roadmap
     height: 2730px
+    +md
+        height: 1875px
     +sm
-        height: 2000px
+        height: auto
+        position: relative
+        top: -119px
 
 .bg-roadmap:before
     content: url(../img/roadmap.png)
@@ -15,8 +23,14 @@ main
     z-index: -1
     left: 50%
     transform: translateX(-25%)
+    +md
+        content: url(../img/roadmap-tablet2.png)
+        position: absolute
+        z-index: -1
+        left: 50%
+        transform: translateX(-50%)
     +sm
-        content: url(../img/Roadmap-mobile.png)
+        content: url(../img/Roadmap1.png)
         position: absolute
         z-index: 0
         left: 50%
@@ -34,17 +48,21 @@ main
         line-height: 45px
     +sm
         font-size: 36px
-        line-height: 36px
-        letter-spacing: 2.4px
-        max-width: 280px
+        line-height: 34px
+        letter-spacing: 0px
+        max-width: 250px
         padding: 0
+        position: relative
+        top: 100px
+        font-weight: 500
     span
         font-size: 48px
         letter-spacing: 2px
         +md
             font-size: 36px
         +sm
-            font-size: 30px
+            letter-spacing: 0px
+            font-size: 28px
 
 
 .benefits-block
@@ -54,7 +72,8 @@ main
     +md
         // margin-top: 200px
     +sm
-        margin-top: 240px
+        margin-top: 225px
+        margin-left: -123px
     &__subtitle
         color: #fefeff
         font-size: 36px
@@ -71,58 +90,244 @@ main
         +md
             font-size: 14px
             line-height: 22px
-    &__ico
-        margin: -110px 22px 0 0
+    &__ico img
+        margin: 5px 0px 0 0
         +md
-            margin: -50px 22px 0 0
+            // margin: -50px 22px 0 0
         +sm
             display: none
-
 
 .benefits-block__item
     display: flex
     width: 50%
-    // margin-bottom: 175px
-    +md
-        // margin-bottom: 230px
+    // padding: 0px 0 195px 0
     +sm
-        // margin-bottom: 70px
+        padding-top: 0
+        padding-bottom: 0 
+        border-left: 8px solid #ffffff
+        box-sizing: content-box
+        padding-left: 46px
+        margin-right: 10px
+        position: relative
 
-.benefits-block__item:nth-child(odd)
+.benefits-block__item:nth-child(1)
+    // padding-top: 145px
+    align-self: flex-end   
+    +sm
+        padding-top: 0
+        padding-bottom: 30px
+        align-self: flex-end
+
+.benefits-block__item:nth-child(2)
+    +sm
+        border-left: 8px dotted #09a5b0
+
+.benefits-block__item:nth-child(4)
     align-self: flex-end
-    max-width: 450px
-    min-height: 390px
-    align-items: center
-    +md
-        max-width: 355px
-        min-height: 389px
     +sm
-        min-width: 220px
-        min-height: 185px
-        align-items: center
+        align-self: flex-start
+        margin-top: 226px   
+        margin-left: 127px
+        border-left: none
+        padding-left: 0
+        padding-right: 46px
+        border-right: 8px dotted #09a5b0
+        padding-bottom: 30px
 
-.benefits-block__item:nth-child(even)
-    align-self: flex-start
-    max-width: 450px
-    min-height: 450px
-    align-items: center
-    +md
-        max-width: 340px
-        min-height: 391px
+.benefits-block__item:nth-child(5)
     +sm
-        min-width: 220px
-        min-height: 185px
-        align-items: center
+        align-self: flex-start
+        border-left: none
+        margin-left: 127px
+        padding-left: 0
+        padding-right: 46px
+        border-right: 8px dotted #09a5b0
+
+.benefits-block__item:nth-child(7)
+    align-self: flex-end
+    +sm
+        margin-top: 218px
+        padding-left: 46px
+        margin-right: 11px
+        align-self: flex-end
+        position: relative
+        padding-bottom: 30px
+        border-left: 8px dotted #09a5b0
+
+.benefits-block__item:nth-child(8)
+    +sm
+        margin-top: 7px 
+        padding-left: 46px
+        margin-right: 11px
+        align-self: flex-end
+        position: relative
+        padding-bottom: 30px
+        border-left: 8px dotted #09a5b0
+
+.benefits-block__item:first-child:before
+    +sm
+        content: url(../img/10-17.png)
+        position: absolute
+        top: -32px
+        left: -32px
+
+.benefits-block__item:nth-child(2):before
+    +sm
+        content: url(../img/11-17.png)
+        position: absolute
+        top: -32px
+        left: -32px
+
+.benefits-block__item:nth-child(4):before
+    +sm
+        content: url(../img/01-18.png)
+        position: absolute
+        top: -32px
+        right: -32px
+
+.benefits-block__item:nth-child(5):before
+    +sm
+        content: url(../img/03-18.png)
+        position: absolute
+        top: -32px
+        right: -32px
+
+.benefits-block__item:nth-child(7):before
+    +sm
+        content: url(../img/04-18.png)
+        position: absolute
+        top: -32px
+        left: -32px
+
+.benefits-block__item:nth-child(8):before
+    +sm
+        content: url(../img/033-18.png)
+        position: absolute
+        top: -32px
+        left: -32px
+
+.roadmap-img-two:before
+    +sm
+        content: url(../img/roadmap2.png)
+        position: absolute
+        z-index: 0
+        left: 50%
+        transform: translateX(-51%)
+
+.roadmap-img-three:before
+    +sm
+        content: url(../img/roadmap3.png)
+        position: absolute
+        z-index: 0
+        left: 50%
+        transform: translateX(-49%)
+        padding-top: 5px 
+
+.roadmap-img-four
+    +sm
+        margin-bottom: 90px
+.roadmap-img-four:before
+    +sm
+        content: url(../img/roadmap4.png)
+        position: absolute
+        z-index: 0
+        left: 50%
+        transform: translateX(-46%)
+        padding-top: 5px 
+
+.benefits-block__item
+    position: relative
 +sm
     .benefits-block__item:nth-child(2)
         align-self: flex-end
-        margin-bottom: 175px
     .benefits-block__item:nth-child(3)
         align-self: flex-start
-    .benefits-block__item:nth-child(4)
-         margin-bottom: 175px
     .benefits-block__item:nth-child(6)
         align-self: flex-end
+
+.benefits-block__desc
+    padding-left: 20px
+    +md
+        padding-left: 16px
+.benefits-block__item:first-child .help
+    margin: 145px 0 195px 0
+    padding-left: 20px
+    +md
+        margin: 90px 0 110px 0
+        padding-left: 25px
+    +sm
+        margin: 0
+        padding: 0
+
+.benefits-block__item:nth-child(2) .help
+    padding-right: 120px
+    +md
+        padding-right: 40px
+
+.benefits-block__item:nth-child(2) .benefits-block__subtitle
+    max-width: 270px
+
+.benefits-block__item:nth-child(4) .help
+    padding-left: 20px
+    margin-bottom: 150px
+    +md
+        margin-bottom: 60px
+        padding-left: 36px
+        margin-top: -20px
+    +sm
+        margin: 0
+        padding: 0
+
+
+.benefits-block__item:nth-child(5) .help
+    padding-right: 110px
+    +md
+        padding-right: 60px
+        margin-bottom: 95px
+    +sm
+        padding: 0
+        margin: 0
+
+.benefits-block__item:nth-child(7) .help
+    padding-left: 20px
+    +sm
+        padding: 0
+
+.benefits-block__item:nth-child(7) .benefits-block__text
+    max-width: 300px
+
+.benefits-block__item:nth-child(8) .help
+    padding-right: 30px
+    +md
+        padding-right: 15px
+
+.benefits-block__item:nth-child(8) .benefits-block__text
+    max-width: 300px
+.help
+    display: flex
+    margin: 0px 0 180px 0
+    height: 200px
+    +md
+        margin: 0 0 80px 0
+    +sm
+        height: auto
+        margin: 0
+
+.lem
+    position: absolute
+    width: 72px
+    height: 72px
+    background: #09a5b0
+    border-radius: 72px 72px 10px
+    right: -2%;
+    top: 66%;
+
+.lem div
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    
 
 
 
